--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,15 @@ edition = "2018"
 [dependencies]
 thiserror = "1.0"
 openssl = "0.10"
+chacha20poly1305 = "0.7"
+x25519-dalek = "1.1"
+rand_core = { version = "0.5", default-features = false }
+x448 = "0.6"
+num = "0.3"
+num-derive = "0.3"
+num-traits = "0.2"
+
+[dev-dependencies]
+hex = "0.4.2"
+serde_json = "1.0"
+serde = { version = "1.0", features = ["derive"] }
