--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,8 +16,9 @@ x448 = "0.6"
 num = "0.3"
 num-derive = "0.3"
 num-traits = "0.2"
+serde = { version = "1.0", features = ["derive"] }
+bincode = "1.3"
 
 [dev-dependencies]
 hex = "0.4.2"
 serde_json = "1.0"
-serde = { version = "1.0", features = ["derive"] }
