--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,6 +11,7 @@ thiserror = "1.0"
 openssl = "0.10"
 chacha20poly1305 = "0.7"
 x25519-dalek = "1.1"
+ed25519-dalek = "1.0"
 rand_core = { version = "0.5", default-features = false }
 x448 = "0.6"
 num = "0.3"
