--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,12 +14,12 @@ x25519-dalek = "1.1"
 ed25519-dalek = "1.0"
 rand_core = { version = "0.5", default-features = false }
 x448 = "0.6"
-num = "0.3"
-num-derive = "0.3"
-num-traits = "0.2"
+num_enum = "0.5.1"
 serde = { version = "1.0", features = ["derive"] }
+serde-value = "0.7"
 bincode = "1.3"
 
 [dev-dependencies]
 hex = "0.4.2"
 serde_json = "1.0"
+mockall = "0.9"
