--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ num_enum = "0.5.1"
 serde = { version = "1.0", features = ["derive"] }
 serde-value = "0.7"
 bincode = "1.3"
+cfg-if = "1.0"
 
 [dev-dependencies]
 hex = "0.4.2"
