--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,10 +17,23 @@ x448 = "0.6"
 num_enum = "0.5.1"
 serde = { version = "1.0", features = ["derive"] }
 serde-value = "0.7"
+serde_with = "1.6.4"
 bincode = "1.3"
 cfg-if = "1.0"
 
 [dev-dependencies]
-hex = "0.4.2"
 serde_json = "1.0"
 mockall = "0.9"
+hex = "0.4.2"
+criterion = "0.3.4"
+
+[[test]]
+name = "integration"
+path = "tests/group_tests.rs"
+
+[[bench]]
+name = "group_benchmark"
+harness = false
+
+[[example]]
+name = "group_example"
