--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,25 +7,23 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-thiserror = "1.0"
-openssl = "0.10"
-chacha20poly1305 = "0.7"
-x25519-dalek = "1.1"
-ed25519-dalek = "1.0"
-rand_core = { version = "0.5", default-features = false }
-x448 = "0.6"
-num_enum = "0.5.1"
-serde = { version = "1.0", features = ["derive"] }
-serde-value = "0.7"
-serde_with = "1.6.4"
-bincode = "1.3"
-cfg-if = "1.0"
+thiserror = "^1"
+openssl = "^0.10"
+chacha20poly1305 = "^0.8"
+x25519-dalek = "^1.1"
+ed25519-dalek = "^1.0"
+rand_core = { version = "^0.5", default-features = false }
+x448 = "^0.6"
+num_enum = "^0.5.1"
+serde = { version = "^1.0", features = ["derive"] }
+bincode = "^1.3"
+cfg-if = "^1.0"
 
 [dev-dependencies]
-serde_json = "1.0"
-mockall = "0.9"
-hex = "0.4.2"
-criterion = "0.3.4"
+serde_json = "^1.0"
+mockall = "^0.9"
+hex = "^0.4.2"
+criterion = "^0.3.4"
 
 [[test]]
 name = "integration"
