--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -8,14 +8,17 @@ on:
 
 env:
   CARGO_TERM_COLOR: always
+  SSH_AUTH_SOCK: /tmp/ssh_agent.sock
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
+    - name: Setup SSH Keys and known_hosts
+      run: |
+        ssh-agent -a $SSH_AUTH_SOCK > /dev/null
+        ssh-add - <<< "${{ secrets.FERRIS_DEPLOY }}"
     - name: Build
       run: cargo build --verbose
     - name: Run tests
