--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,16 +8,12 @@ edition = "2018"
 
 [dependencies]
 thiserror = "^1"
-openssl = "^0.10"
-chacha20poly1305 = "^0.8"
-x25519-dalek = "^1.1"
-ed25519-dalek = "^1.0"
-rand_core = { version = "^0.5", default-features = false }
-x448 = "^0.6"
+ferriscrypt = { git = "ssh://git@github.com/WickrInc/ferriscrypt.git", tag = "0.7.3" }
 num_enum = "^0.5.1"
 serde = { version = "^1.0", features = ["derive"] }
 bincode = "^1.3"
 cfg-if = "^1.0"
+serde_repr = "^0.1"
 
 [dev-dependencies]
 serde_json = "^1.0"
