--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,12 +8,12 @@ edition = "2018"
 
 [dependencies]
 thiserror = "^1"
-ferriscrypt = { git = "ssh://git@github.com/WickrInc/ferriscrypt.git", tag = "0.12.0" }
-serde = { version = "^1.0", features = ["derive"] }
-bincode = "^1.3"
-serde_repr = "^0.1"
+ferriscrypt = { git = "ssh://git@github.com/WickrInc/ferriscrypt.git", tag = "0.12.1" }
+tls_codec = { git = "https://github.com/stephaneyfx/formats.git", branch = "wip" }
+tls_codec_derive = { git = "https://github.com/stephaneyfx/formats.git", branch = "wip" }
 
 [dev-dependencies]
+serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
 hex = "^0.4.2"
 
