--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,11 @@ tls_codec = { git = "https://github.com/stephaneyfx/formats.git", branch = "wip"
 tls_codec_derive = { git = "https://github.com/stephaneyfx/formats.git", branch = "wip" }
 
 [dev-dependencies]
+criterion = { version = "0.3.5", features = ["html_reports"] }
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
 hex = "^0.4.2"
+
+[[bench]]
+name = "tls"
+harness = false
