--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,8 @@ version = "0.1.1"
 authors = ["Tom Leavy <tom@wickr.com>"]
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[features]
+benchmark = []
 
 [dependencies]
 thiserror = "^1"
@@ -21,3 +22,4 @@ hex = "^0.4.2"
 [[bench]]
 name = "tls"
 harness = false
+required-features = ["benchmark"]
