--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,12 +12,12 @@ thiserror = "^1"
 ferriscrypt = { git = "ssh://git@github.com/WickrInc/ferriscrypt.git", tag = "0.15.1" }
 tls_codec = "0.2.0-pre.3"
 tls_codec_derive = "0.2.0-pre.3"
+hex = { version = "^0.4.3", features = ["serde"] }
 
 [dev-dependencies]
 criterion = { version = "0.3.5", features = ["html_reports"] }
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
-hex = "^0.4.2"
 
 [[bench]]
 name = "tls"
