--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,8 @@ tls_codec = "0.2.0-pre.3"
 tls_codec_derive = "0.2.0-pre.3"
 hex = { version = "^0.4.3", features = ["serde"] }
 enum-iterator = "0.7.0"
+der = { version = "^0.5.1", features = ["alloc"]}
+spki = "^0.5.4"
 
 [dev-dependencies]
 assert_matches = "1.5.0"
