Update ferriscrypt and support wasm (#163)
* Update ferriscrypt to 0.16 and support RustCrypto engine

* Remove secret key serializer

* Replace `SystemTime` with `MlsTime`

* Support for wasm32 and browsers

* replace `performance.now()` with `Date.now()` for WASM JS

* Update ferriscrypt to 0.16.0

* Replace clippy with wasm32 target_arch

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -19,7 +19,11 @@ jobs:
       run: |
         ssh-agent -a $SSH_AUTH_SOCK > /dev/null
         ssh-add - <<< "${{ secrets.FERRIS_DEPLOY }}"
-    - name: Build
-      run: cargo build --verbose
-    - name: Run tests
-      run: cargo test --verbose
+    - name: Run tests (openssl engine)
+      run: cargo test --verbose -- --ignored
+    - name: Run tests (rust crypto engine)
+      run: cargo test --verbose --no-default-features --features="rustcrypto_engine"
+    - uses: nanasess/setup-chromedriver@v1
+    - uses: jetli/wasm-pack-action@v0.3.0
+    - name: Run tests (web)
+      run: wasm-pack test --headless --chrome -- --no-default-features --features="browser"
