--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ assert_matches = "1.5.0"
 criterion = { version = "0.3.5", features = ["html_reports"] }
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
+rand = "0.8"
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 wasm-bindgen-test = { version = "0.3.26", default-features = false }
