--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,6 +21,7 @@ enum-iterator = "0.7.0"
 der = { version = "^0.5.1", features = ["alloc"]}
 spki = "^0.5.4"
 wasm-bindgen = { version = "^0.2.79", optional = true }
+zeroize = { version = "^1.3", features = ["zeroize_derive"] }
 
 [dev-dependencies]
 assert_matches = "1.5.0"
