Unique extensions in `ExtensionList` (#188)
* Ensure extensions are unique in `ExtensionList`

Resolves #157

* Do not reserve when deserializing `HashMap`

The length is in bytes and does not directly correlate to the number of items in the map.

* Fail deserializing an extension list if it contains duplicates

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,6 +18,7 @@ tls_codec = "0.2.0"
 tls_codec_derive = "0.2.0"
 hex = { version = "^0.4.3", features = ["serde"] }
 enum-iterator = "0.7.0"
+indexmap = "1.8.0"
 der = { version = "^0.5.1", features = ["alloc"]}
 spki = "^0.5.4"
 wasm-bindgen = { version = "^0.2.79", optional = true }
