--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ der = { version = "^0.5.1", features = ["alloc"]}
 spki = "^0.5.4"
 wasm-bindgen = { version = "^0.2.79", optional = true }
 zeroize = { version = "^1.3", features = ["zeroize_derive"] }
+constant_time_eq = "0.2.1"
 
 [dev-dependencies]
 assert_matches = "1.5.0"
