--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,13 +13,14 @@ default = ["openssl_engine"]
 
 [dependencies]
 thiserror = "^1"
-ferriscrypt = { git = "ssh://git@github.com/WickrInc/ferriscrypt.git", default-features = false, features = ["hpke"], tag = "0.18.0" }
+ferriscrypt = { git = "ssh://git@github.com/WickrInc/ferriscrypt.git", default-features = false, features = ["hpke", "serde"], tag = "0.18.1" }
 tls_codec = "0.2.0"
 tls_codec_derive = "0.2.0"
 hex = { version = "^0.4.3", features = ["serde"] }
 enum-iterator = "0.7.0"
-indexmap = "1.8.0"
+indexmap = { version = "1.8.0", features = ["serde"] }
 der = { version = "^0.5.1", features = ["alloc"]}
+serde = { version = "^1.0", features = ["derive"] }
 spki = "^0.5.4"
 wasm-bindgen = { version = "^0.2.79", optional = true }
 zeroize = { version = "^1.3", features = ["zeroize_derive"] }
@@ -27,7 +28,6 @@ zeroize = { version = "^1.3", features = ["zeroize_derive"] }
 [dev-dependencies]
 assert_matches = "1.5.0"
 criterion = { version = "0.3.5", features = ["html_reports"] }
-serde = { version = "^1.0", features = ["derive"] }
 serde_json = "^1.0"
 rand = "0.8"
 
