Integrate harness, first part (#303)
* Added test harness integration directory with the mock client. Replaced the mock client's create group function with AWS MLS.

* Added commit functionality

* added support for commits, adds, removes, updates

* removed unnecessary file

* fixed typos

* Send MLS error messages instead of panicing

* Decoupled applying own commit from processing

* Fixed bugs after rebase

* Removed error macro

* Updated toml

* Update dependencies to pass cargo-audit

* Fixed typos

* Fixed typos

* Added support for adds and removes

* Added don't edit note

* Fixes after rebase

* fixed formatting

* Applied review suggestions

* Applied review suggestions

* Added tests to actions

* Added tests to actions

* Fixed actions

Co-authored-by: Stephane Raux <sraux@amazon.com>

--- a/.github/workflows/clippy_check.yml
+++ b/.github/workflows/clippy_check.yml
@@ -26,4 +26,4 @@ jobs:
           SSH_AUTH_SOCK: /tmp/ssh_agent.sock
         with:
           command: clippy
-          args: -- -D warnings
+          args: --workspace -- -D warnings
