Refactor credential for Draft 14 (#309)
* Refactor credential for Draft 14

* Update test harness and CI due to recent changes

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -27,3 +27,6 @@ jobs:
     - uses: jetli/wasm-pack-action@v0.3.0
     - name: Run tests (web)
       run: wasm-pack test --headless --chrome -- --no-default-features --features="browser"
+    - name: Build test harness integration
+      working-directory: ./test_harness_integration
+      run: cargo build
