--- a/.github/workflows/rustfmt.yml
+++ b/.github/workflows/rustfmt.yml
@@ -23,3 +23,10 @@ jobs:
         with:
           command: fmt
           args: --all -- --check
+      - uses: actions-rs/cargo@v1
+        working-directory: ./test_harness_integration
+        env:
+          SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+        with:
+          command: fmt
+          args: --all -- --check
