--- a/.github/workflows/native_build.yml
+++ b/.github/workflows/native_build.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Rust Fmt
       run: cargo fmt --all -- --check
     - name: Clippy
-      run: cargo clippy --workspace -- -D warnings
+      run: cargo clippy --all-targets --all-features --workspace -- -D warnings
     - name: Test (OpenSSL Engine) 
       run: cargo test --verbose -- --ignored
     - name: Test (rust crypto engine)
