--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,3 +36,13 @@ rand = "0.8"
 
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 wasm-bindgen-test = { version = "0.3.26", default-features = false }
+
+[[bench]]
+name = "encap"
+harness = false
+required-features = ["benchmark"]
+
+[[bench]]
+name = "decap"
+harness = false
+required-features = ["benchmark"]
