Group state serialization benchmark  (#373)
* Group state serialization benchmark and refactors

* Clippy update for String formatting

* Removed commented out line

* Formatting changes

* Creation function refactoring (tree + group)

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,3 +46,8 @@ required-features = ["benchmark"]
 name = "decap"
 harness = false
 required-features = ["benchmark"]
+
+[[bench]]
+name = "group_serialize"
+harness = false
+required-features = ["benchmark"]
