--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,6 +27,7 @@ serde = { version = "^1.0", features = ["derive"] }
 spki = "^0.5.4"
 wasm-bindgen = { version = "^0.2.79", optional = true }
 zeroize = { version = "^1.3", features = ["zeroize_derive"] }
+debug_tree = "0.4.0"
 
 [dev-dependencies]
 assert_matches = "1.5.0"
