--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,3 +52,13 @@ required-features = ["benchmark"]
 name = "group_serialize"
 harness = false
 required-features = ["benchmark"]
+
+[[bench]]
+name = "group_commit"
+harness = false
+required-features = ["benchmark"]
+
+[[bench]]
+name = "group_application"
+harness = false
+required-features = ["benchmark"]
