Secret tree serialization benchmark (#391)
* Secret tree serialization bench

* Added line to end of file for `Cargo.toml`

* Nit update

* Remove comment and added benchmark guards

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,3 +62,8 @@ required-features = ["benchmark"]
 name = "group_application"
 harness = false
 required-features = ["benchmark"]
+
+[[bench]]
+name = "secret_tree_serialize"
+harness = false
+required-features = ["benchmark"]
