Support proposals by reference in ExternalGroup (#405)
* Support proposals by reference in ExternalGroup

* Increase WASM test timeout to 1000 seconds

* Remove render timeout for WASM tests

* Another attempt to fix page load timeout

--- a/.github/workflows/wasm_build.yml
+++ b/.github/workflows/wasm_build.yml
@@ -3,6 +3,7 @@ on: [push, pull_request]
 env:
   CARGO_TERM_COLOR: always
   SSH_AUTH_SOCK: /tmp/ssh_agent.sock
+  WASM_BINDGEN_TEST_TIMEOUT: 1000
 jobs:
   BuildAndTest:
     runs-on: [ubuntu-latest] 
@@ -15,4 +16,4 @@ jobs:
     - uses: nanasess/setup-chromedriver@v1
     - uses: jetli/wasm-pack-action@v0.3.0
     - name: Test (WASM + RustCrypto)
-      run: wasm-pack test --headless --chrome -- --no-default-features --features="browser"
+      run: wasm-pack test --headless --chrome --release -- --no-default-features --features="browser"
