--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,7 @@ authors = ["Tom Leavy <tom@wickr.com>"]
 edition = "2021"
 
 [features]
-benchmark = []
+benchmark = ["serde_json"]
 rustcrypto_engine = ["ferriscrypt/rustcrypto_engine"]
 openssl_engine = ["ferriscrypt/openssl_engine"]
 browser = ["ferriscrypt/browser", "wasm-bindgen"]
@@ -24,6 +24,7 @@ enum-iterator = "0.8.1"
 indexmap = { version = "1.8.0", features = ["serde"] }
 der = { version = "^0.5.1", features = ["alloc"]}
 serde = { version = "^1.0", features = ["derive"] }
+serde_json = { version = "^1.0", optional = true }
 spki = "^0.5.4"
 wasm-bindgen = { version = "^0.2.79", optional = true }
 zeroize = { version = "^1.3", features = ["zeroize_derive"] }
