--- a/.github/workflows/benchmarks_merge.yml
+++ b/.github/workflows/benchmarks_merge.yml
@@ -10,7 +10,8 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
-      contents: read
+      contents: read, write
+      deployments: write
     steps:
       - uses: actions/checkout@v2
       - run: rustup toolchain update stable && rustup default stable
