Fixing read write perm syntax on merge (#421)
* Fixing read write perm on merge

* Write perm update for `contents`

--- a/.github/workflows/benchmarks_merge.yml
+++ b/.github/workflows/benchmarks_merge.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     permissions:
       id-token: write
-      contents: read, write
+      contents: write
       deployments: write
     steps:
       - uses: actions/checkout@v2
