Introduces fuzz testing (#410)
* Initial fuzz testing set up and first fuzz test

* More fuzz tests

* Fuzz tests `yml` and more fuzz tests

* Updates to `confirmation_tag`

* `env` variable for fuzz runs

* Adding `/` to fuzz `gitignore`

* Couple fuzz tests removed, reverts, and cipher

* Removing old fuzz tests

* Using constant bytes from `authentication_data.rs`

* `Arbitrary` added and changes to fuzz tests

* Tag and small fix

* Small `deref` fix

* Format change

* Remove auth data from `Cargo.toml`

* Updated features in `native_build.yml`

* Removing browser so one engine runs

* Updates to fuzz tests and `Arbitrary` for `usize`

* Cargo formatting

* Update to signing order and `native_build.yml`

* Added `unwrap` for signing

* Clippy update

--- a/.github/workflows/native_build.yml
+++ b/.github/workflows/native_build.yml
@@ -18,7 +18,7 @@ jobs:
     - name: Rust Fmt
       run: cargo fmt --all -- --check
     - name: Clippy
-      run: cargo clippy --all-targets --all-features --workspace -- -D warnings
+      run: cargo clippy --all-targets --features="benchmark" --workspace -- -D warnings
     - name: Test (OpenSSL Engine) 
       run: cargo test --verbose -- --ignored
     - name: Test (rust crypto engine)
