Enforce proposal validation rules (#394)
* Improve compliance with proposal validation rules in latest RFC

- A `ReInit` proposal must be the only proposal in a commit.
- Fix remove proposal filter: one may propose to remove themselves but one cannot commit to remove themselves.
- Fix invalid tests that broke because of stricter validation.
- Implement proposal validation tests covering hard errors (when receiving an invalid commit or committing additional proposals making the commit invalid) and filtering of invalid proposals by reference.

Resolves #329

* Don't run ignored tests in CI

* Don't compile ignored tests when targeting wasm32

The `wasm_bindgen_test` macro appears not to support the `ignore` attribute.

* Do not error on by-reference self update

* Remove test `test_invalid_commit_self_update_cached`

It is not relevant anymore now that invalid proposals are filtered out.

* Modify tree while validating proposals

This fixes some corner cases that would previously trigger duplicate key
errors. This also avoids validating and modifying the `TreeKemPublic`
instance twice. Finally, filters were redesigned:
- To be more granular and follow the proposal verification steps detailed in the RFC.
- To avoid duplicating logic between validation (when receiving a commit)
  and filtering (when preparing a commit).

* Enable tests about adding same client as exiting member

* Move `update_unmerged` to `TreeKemPublic`

To keep most of the tree logic in `TreeKemPublic`.

* Create `ProposalApplier`

To trim down the number of parameters of some functions.

* Add leaf index to `on_update` and basic test for `batch_edit`

* Appease clippy

--- a/.github/workflows/native_build.yml
+++ b/.github/workflows/native_build.yml
@@ -19,8 +19,8 @@ jobs:
       run: cargo fmt --all -- --check
     - name: Clippy
       run: cargo clippy --all-targets --features="benchmark" --workspace -- -D warnings
-    - name: Test (OpenSSL Engine) 
-      run: cargo test --verbose -- --ignored
+    - name: Test (OpenSSL Engine)
+      run: cargo test --verbose
     - name: Test (rust crypto engine)
       run: cargo test --verbose --no-default-features --features="rustcrypto_engine"
     - name: Build (Test Harness Integration)
