--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ tls_codec_derive = "0.2.0"
 hex = { version = "^0.4.3", features = ["serde"] }
 enum-iterator = "0.8.1"
 indexmap = { version = "1.8.0", features = ["serde"] }
-der = { version = "^0.5.1", features = ["alloc"]}
+der = { version = "^0.6.0", features = ["alloc"]}
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = { version = "^1.0", optional = true }
 spki = "^0.5.4"
@@ -31,6 +31,7 @@ wasm-bindgen = { version = "^0.2.79", optional = true }
 zeroize = { version = "^1.3", features = ["zeroize_derive"] }
 debug_tree = "0.4.0"
 arbitrary = { version = "1", features = ["derive"], optional = true }
+x509-cert = "0.1.0"
 
 [dev-dependencies]
 assert_matches = "1.5.0"
