--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,6 +23,7 @@ tls_codec_derive = "0.2.0"
 hex = { version = "^0.4.3", features = ["serde"] }
 enum-iterator = "0.8.1"
 indexmap = { version = "1.8.0", features = ["serde"] }
+itertools = "0.10.3"
 der = { version = "^0.6.0", features = ["alloc"]}
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = { version = "^1.0", optional = true }
