New json file for groups and workflow updates (#444)
* Allow `load_test_cases` macro for benchmarks

* Group state serialization implemented

* Fixes to fuzz tests

* File epoch repo and benchmark updates

* `serde_json` is not optional

* Intro of `FsKeyPackageRepository`

* Updates to `group_functions` and exports

* Workflows use all benches and serialization fix

* Removing changes found in another branch

* Remove

* Double definition of `group

* Clippy

* Updates to workflows

* Minor adjustments

Co-authored-by: Stephane Raux <sraux@amazon.com>
Co-authored-by: Jakob Melendez <jakobmel@amazon.com>

--- a/.github/workflows/benchmarks_pr.yml
+++ b/.github/workflows/benchmarks_pr.yml
@@ -26,5 +26,6 @@ jobs:
       - name: Copy benchmark files to test data
         run: |
           aws s3 cp s3://benchmark-wickr-mls/empty_trees.json ./test_data/empty_trees.json
+          aws s3 cp s3://benchmark-wickr-mls/group_state.json ./test_data/group_state.json
       - name: Run benchmark
-        run: cargo bench --features benchmark --bench encap --bench decap -- --output-format bencher
+        run: cargo bench --features benchmark --bench encap --bench decap --bench group_serialize --bench group_commit --bench group_application --bench secret_tree_serialize -- --output-format bencher | tee output.txt
