--- a/.github/workflows/benchmarks_merge.yml
+++ b/.github/workflows/benchmarks_merge.yml
@@ -27,8 +27,9 @@ jobs:
       - name: Copy benchmark files to test data
         run: |
           aws s3 cp s3://benchmark-wickr-mls/empty_trees.json ./test_data/empty_trees.json
+          aws s3 cp s3://benchmark-wickr-mls/group_state.json ./test_data/group_state.json
       - name: Run benchmark
-        run: cargo bench --features benchmark --bench encap --bench decap -- --output-format bencher | tee output.txt
+        run: cargo bench --features benchmark --bench encap --bench decap --bench group_serialize --bench group_commit --bench group_application --bench secret_tree_serialize -- --output-format bencher | tee output.txt
       - name: Store benchmark result
         uses: benchmark-action/github-action-benchmark@v1
         with:
