--- a/Cargo.toml
+++ b/Cargo.toml
@@ -33,6 +33,7 @@ zeroize = { version = "^1.3", features = ["zeroize_derive"] }
 debug_tree = "0.4.0"
 arbitrary = { version = "1", features = ["derive"], optional = true }
 x509-cert = "0.1.0"
+base64 = "0.13.0"
 
 [dev-dependencies]
 assert_matches = "1.5.0"
