Add `ExtensionClass` to make `ExtensionList` more specific (#462)
* Add `ExtensionClass` to make `ExtensionList` more specific

* Don't serialize extension list phantom data

* Update CI to pull the latest Rust toolchain

* Try to fix interop tests

* Simplify ExtensionList by making ExtensionClass impls struct instead of enum

* Remove dead code

--- a/.github/workflows/benchmarks_push.yml
+++ b/.github/workflows/benchmarks_push.yml
@@ -13,8 +13,8 @@ jobs:
       contents: read
       issues: write
     steps:
-      - uses: actions/checkout@v2
-      - run: rustup toolchain update stable && rustup default stable
+      - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@stable
       - name: Setup SSH Keys and known_hosts
         run: |
           ssh-agent -a $SSH_AUTH_SOCK > /dev/null
