--- a/.github/workflows/wasm_build.yml
+++ b/.github/workflows/wasm_build.yml
@@ -8,7 +8,8 @@ jobs:
   BuildAndTest:
     runs-on: [ubuntu-latest] 
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3
+    - uses: dtolnay/rust-toolchain@stable
     - name: Setup SSH Keys and known_hosts
       run: |
         ssh-agent -a $SSH_AUTH_SOCK > /dev/null
