--- a/.github/workflows/benchmarks_pr.yml
+++ b/.github/workflows/benchmarks_pr.yml
@@ -12,8 +12,8 @@ jobs:
       id-token: write
       contents: read
     steps:
-      - uses: actions/checkout@v2
-      - run: rustup toolchain update stable && rustup default stable
+      - uses: actions/checkout@v3
+      - uses: dtolnay/rust-toolchain@stable
       - name: Setup SSH Keys and known_hosts
         run: |
           ssh-agent -a $SSH_AUTH_SOCK > /dev/null
