--- a/test_harness_integration/Cargo.toml
+++ b/test_harness_integration/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Marta Mularczyk <mulmarta@amazon.ch>"]
 edition = "2021"
 
 [dependencies]
-aws-mls = { path = ".."}
+aws-mls = { path = "..", features = ["benchmark"]}
 tonic = "0.7"
 prost = "0.10"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
