--- a/Cargo.toml
+++ b/Cargo.toml
@@ -27,12 +27,11 @@ itertools = "0.10.3"
 der = { version = "^0.6.0", features = ["alloc"]}
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = { version = "^1.0", optional = true }
-spki = "^0.5.4"
 wasm-bindgen = { version = "^0.2.79", optional = true }
 zeroize = { version = "^1.3", features = ["zeroize_derive"] }
 debug_tree = "0.4.0"
 arbitrary = { version = "1", features = ["derive"], optional = true }
-x509-cert = "0.1.0"
+x509-cert = { version = "0.1.0", features = ["std"] }
 base64 = "0.13.0"
 num_enum = "0.5"
 cfg-if = "^1"
