--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,8 +12,9 @@ benchmark = ["serde_json"]
 rustcrypto_engine = ["ferriscrypt/rustcrypto_engine"]
 openssl_engine = ["ferriscrypt/openssl_engine"]
 browser = ["ferriscrypt/browser", "wasm-bindgen"]
-default = ["openssl_engine"]
+default = ["openssl_engine", "rayon"]
 arbitrary = ["dep:arbitrary", "ferriscrypt/arbitrary"]
+rayon = ["dep:rayon"]
 
 [dependencies]
 thiserror = "^1"
@@ -31,6 +32,8 @@ wasm-bindgen = { version = "^0.2.79", optional = true }
 zeroize = { version = "^1.3", features = ["zeroize_derive"] }
 debug_tree = "0.4.0"
 arbitrary = { version = "1", features = ["derive"], optional = true }
+# TODO: https://github.com/GoogleChromeLabs/wasm-bindgen-rayon
+rayon = { version = "1", optional = true }
 x509-cert = { version = "0.1.0", features = ["std"] }
 base64 = "0.13.0"
 num_enum = "0.5"
