Move identity to core and identity-x509 crates (#604)
* Move identity to core and identity-x509 crates

* Fix GitHub Actions

* Fix WASM support

* GitHub actions fixup again

* Rearrange uses statements in CI

* Fix keys in x509 identity ci

* Fix ci _again_

* Address PR Feedback

* Address PR feedback

* Cargo fmt fix

* use INVALID_CREDENTIAL_TYPE in tests

* Fix wasm build

* Use self.offset in identity extractor

* Roll back offset change

--- a/.github/workflows/crypto_openssl_build.yml
+++ b/.github/workflows/crypto_openssl_build.yml
@@ -1,4 +1,4 @@
-name: Core
+name: CryptoOpenssl
 on: [push, pull_request]
 env:
   CARGO_TERM_COLOR: always
@@ -21,7 +21,7 @@ jobs:
       run: cargo fmt --all -- --check
     - name: Clippy
       working-directory: aws-mls-crypto-openssl
-      run: cargo clippy -- -D warnings
+      run: cargo clippy --all-targets -- -D warnings
     - name: Test (OpenSSL Engine)
       working-directory: aws-mls-crypto-openssl
       run: cargo test --verbose
