--- a/aws-mls-core/Cargo.toml
+++ b/aws-mls-core/Cargo.toml
@@ -23,3 +23,8 @@ num_enum = "0.5"
 [dev-dependencies]
 assert_matches = "1.5.0"
 
+[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
+wasm-bindgen-test = { version = "0.3.26", default-features = false }
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = { version = "^0.2.79" }
