--- a/aws-mls/Cargo.toml
+++ b/aws-mls/Cargo.toml
@@ -5,16 +5,13 @@ authors = ["Tom Leavy <tom@wickr.com>"]
 edition = "2021"
 
 [features]
-benchmark = ["serde_json"]
-rustcrypto_engine = ["aws-mls-crypto-ferriscrypt/rustcrypto_engine"]
-openssl_engine = ["aws-mls-crypto-ferriscrypt/openssl_engine"]
-browser = ["aws-mls-crypto-ferriscrypt/browser", "wasm-bindgen"]
-default = ["openssl_engine", "rayon"]
+benchmark = ["serde_json", "aws-mls-crypto-openssl"]
+default = ["rayon"]
 arbitrary = ["dep:arbitrary", "aws-mls-core/arbitrary"]
 rayon = ["dep:rayon"]
 
 [dependencies]
-aws-mls-core = { path = "../aws-mls-core", default-features = false }
+aws-mls-core = { path = "../aws-mls-core" }
 thiserror = "^1"
 tls_codec = "0.2.0"
 tls_codec_derive = "0.2.0"
@@ -25,7 +22,6 @@ itertools = "0.10.3"
 der = { version = "^0.6.0", features = ["alloc"]}
 serde = { version = "^1.0", features = ["derive"] }
 serde_json = { version = "^1.0", optional = true }
-wasm-bindgen = { version = "^0.2.79", optional = true }
 zeroize = { version = "^1.3", features = ["zeroize_derive"] }
 debug_tree = "0.4.0"
 arbitrary = { version = "1", features = ["derive"], optional = true }
@@ -36,8 +32,8 @@ base64 = "0.13.0"
 num_enum = "0.5"
 cfg-if = "^1"
 serde_with = "^2"
-aws-mls-crypto-ferriscrypt = { path = "../aws-mls-crypto-ferriscrypt", default-features = false }
 bincode = "1"
+aws-mls-crypto-openssl = { path = "../aws-mls-crypto-openssl", optional = true }
 
 [dev-dependencies]
 assert_matches = "1.5.0"
@@ -45,8 +41,16 @@ criterion = { version = "0.3.5", features = ["html_reports"] }
 serde_json = "^1.0"
 rand = "0.8"
 
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+wasm-bindgen = { version = "^0.2.79" }
+
 [target.'cfg(target_arch = "wasm32")'.dev-dependencies]
 wasm-bindgen-test = { version = "0.3.26", default-features = false }
+aws-mls-crypto-rustcrypto = { path = "../aws-mls-crypto-rustcrypto", features = ["browser"] }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
+aws-mls-crypto-openssl = { path = "../aws-mls-crypto-openssl"}
+
 
 [[bench]]
 name = "encap"
