--- a/aws-mls/test_harness_integration/Cargo.toml
+++ b/aws-mls/test_harness_integration/Cargo.toml
@@ -7,12 +7,17 @@ publish = false
 
 [dependencies]
 aws-mls = { path = "..", features = ["benchmark"]}
-aws-mls-crypto-ferriscrypt = { path = "../../aws-mls-crypto-ferriscrypt" }
 tonic = "0.7"
 prost = "0.10"
 tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
 clap = { version = "3", features = ["derive"] }
 thiserror = "1"
+
+[target.'cfg(target_arch = "wasm32")'.dependencies]
+aws-mls-crypto-rustcrypto = { path = "../../aws-mls-crypto-rustcrypto", features = ["browser"] }
+
+[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
+aws-mls-crypto-openssl = { path = "../../aws-mls-crypto-openssl"}
 
 [build-dependencies]
 tonic-build = "0.7"
