--- a/aws-mls/Cargo.toml
+++ b/aws-mls/Cargo.toml
@@ -11,12 +11,14 @@ arbitrary = ["dep:arbitrary", "aws-mls-core/arbitrary"]
 rayon = ["dep:rayon"]
 
 [dependencies]
+async-trait = "0.1.61"
 aws-mls-core = { path = "../aws-mls-core" }
 thiserror = "^1"
 tls_codec = "0.2.0"
 tls_codec_derive = "0.2.0"
 hex = { version = "^0.4.3", features = ["serde"] }
 enum-iterator = "1.1.3"
+futures = "0.3.25"
 indexmap = { version = "1.8.0", features = ["serde"] }
 itertools = "0.10.3"
 der = { version = "^0.6.0", features = ["alloc"]}
@@ -36,7 +38,8 @@ aws-mls-crypto-openssl = { path = "../aws-mls-crypto-openssl", optional = true }
 
 [dev-dependencies]
 assert_matches = "1.5.0"
-criterion = { version = "0.3.5", features = ["html_reports"] }
+criterion = { version = "0.3.5", features = ["async_futures", "html_reports"] }
+futures-test = "0.3.25"
 serde_json = "^1.0"
 rand = "0.8"
 
