--- a/aws-mls/fuzz/Cargo.toml
+++ b/aws-mls/fuzz/Cargo.toml
@@ -10,6 +10,7 @@ cargo-fuzz = true
 
 [dependencies]
 aws-mls = { path = "..", features = ["benchmark", "arbitrary"] }
+futures = "0.3.25"
 libfuzzer-sys = "0.4"
 once_cell = "1.13.0"
 
